# multi-table-chain-of-thought

./: .gitignore  README.md
Chain-Of-Tables-main/ChainOfTables-main/: Dockerfile  README.rst  compile_natural_table.py  compose-tables-chain.yaml  compose-textgen.yaml  pyproject.toml  upload_dataset.py
Chain-Of-Tables-main/ChainOfTables-main/app/: agent.py  client.py  config.py  eval.py  operation.py  prompt.py
Chain-Of-Tables-main/ChainOfTables-main/app/prompts/: direct_query.jinja  direct_query_json.jinja  dynamic_plan.jinja  dynamic_plan_json.jinja  f_aggregate_table.jinja  f_join_tables.jinja  f_normalize_column.jinja  f_select_table.jinja  generate_args.jinja  generate_args_f_add_column.jinja  generate_args_f_add_column_json.jinja  generate_args_f_aggregate_table.jinja  generate_args_f_aggregate_table_json.jinja  generate_args_f_filter_table.jinja  generate_args_f_filter_table_json.jinja  generate_args_f_group_by.jinja  generate_args_f_group_by_json.jinja  generate_args_f_join_tables.jinja  generate_args_f_join_tables_json.jinja  generate_args_f_normalize_column.jinja  generate_args_f_normalize_column_json.jinja  generate_args_f_select_column.jinja  generate_args_f_select_column_json.jinja  generate_args_f_select_row.jinja  generate_args_f_select_row_json.jinja  generate_args_f_select_table.jinja  generate_args_f_select_table_json.jinja  generate_args_f_sort_by.jinja  generate_args_f_sort_by_json.jinja  (+1 more)
Chain-Of-Tables-main/ChainOfTables-main/test/: test_operation.py
Chain-Of-Tables-main/ChainOfTables-main/wikitablequestions_multi_table/: README.md
