[tool.poetry]
name = "chainoftables"
version = "0.1.0"
description = ""
authors = ["Muaid Mughrabi <muaid.mughrabi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
text-generation = "^0.7.0"
jinja2 = "^3.1.3"
pandas = "^2.2.1"
datasets = "^2.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
